--- a/templates/index.html
+++ b/templates/index.html
@@ -48,46 +48,46 @@
     <div class="contentform">
     	<div id="sendmessage"> Your message has been sent successfully. Thank you. </div>
 
-
+        
     	<div class="leftcontact">
 			      <div class="form-group">
 			        <p>Credit Score<span>*</span></p>
-			        <span class="icon-case"><i class="fa fa-male"></i></span>
+			        <span class="icon-case"></span>
 				        <input name="CreditScore"  name="CreditScore" type="number" >
                 <div class="validation"></div>
        </div> 
 
             <div class="form-group">
             <p>Age <span>*</span></p>
-            <span class="icon-case"><i class="fa fa-user"></i></span>
+            <span class="icon-case"></span>
 				<input name="Age" required="required">
                 <div class="validation"></div>
 			</div>
 
 			<div class="form-group">
 			<p>Tenure <span>*</span></p>	
-			<span class="icon-case"><i class="fa fa-envelope-o"></i></span>
+			<span class="icon-case"></span>
                 <input name="Tenure" required="required">
                 <div class="validation"></div>
 			</div>	
 
 			<div class="form-group">
 			<p>Enter the Account Balance:  <span>*</span></p>
-			<span class="icon-case"><i class="fa fa-home"></i></span>
+			<span class="icon-case"></span>
 				<input name="Balance" required="required">
                 <div class="validation"></div>
 			</div>
 
 			<div class="form-group">
 			<p>Number of Products <span>*</span></p>
-			<span class="icon-case"><i class="fa fa-location-arrow"></i></span>
+			<span class="icon-case"></span>
 				<input name="NumOfProducts" required="required">
                 <div class="validation"></div>
 			</div>
 
 			<div class="form-group">
 			<p>Do the Customer have Credit Card? (1=Yes, 0=No) <span>*</span></p>
-			<span class="icon-case"><i class="fa fa-map-marker"></i></span>
+			<span class="icon-case"></span>
 				<input name="HasCrCard" required="required">
                 <div class="validation"></div>
 			</div>	
@@ -100,21 +100,21 @@
 
 			<div class="form-group">
 			<p>Is the Customer Active Member (1=Yes, 0=No)<span>*</span></p>
-			<span class="icon-case"><i class="fa fa-building-o"></i></span>
+			<span class="icon-case"></span>
 				<input name="IsActiveMember" required="required">
                 <div class="validation"></div>
 			</div>	
 
 			<div class="form-group">
 			<p>Enter the Estimated Salary: <span>*</span></p>	
-			<span class="icon-case"><i class="fa fa-phone"></i></span>
+			<span class="icon-case"></span>
 				<input name="EstimatedSalary" required="required">
                 <div class="validation"></div>
 			</div>
 
 			<div class="form-group">
 			<p>Enter The Location: <span>*</span></p>
-			<span class="icon-case"><i class="fa fa-info"></i></span>
+			<span class="icon-case"></span>
                 <select name="Geography_Germany" required="required">
                 <option value="Germany">Germany</option>
                 <option value="Spain">Spain</option>
@@ -125,7 +125,7 @@
 
 			<div class="form-group">
 			<p>Gender of Customer:  <span>*</span></p>	
-			<span class="icon-case"><i class="fa fa-comment-o"></i></span>
+			<span class="icon-case"></span>
                 <select name="Gender_Male" id="resea" required="required">
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
